src/main/java/ru/test/company/error/EmployeeError.java
package ru.test.company.error;

public class EmployeeError {

    public static final String EMPLOYEE_ID_IS_MANDATORY = "ИД сотрудника является обязательным и не может быть пустым";
    public static final String EMPLOYEE_FIRST_NAME_IS_MANDATORY = "Имя сотрудника является обязательным и не может быть пустым";
    public static final String EMPLOYEE_LAST_NAME_IS_MANDATORY = "Фамилия сотрудника является обязательным и не может быть пустым";
    public static final String EMPLOYEE_DEPARTMENT_ID_IS_MANDATORY = "ИД отдела сотрудника является обязательным и не может быть пустым";
    public static final String EMPLOYEE_FIRST_WORKING_DATE_ID_IS_MANDATORY = "Дата первого рабочего дня сотрудника является обязательным и не может быть пустым";
    public static final String EMPLOYEE_LAST_WORKING_DATE_IS_MANDATORY = "Дата последнего рабочего дня является обязательным и не может быть пустым";
    public static final String EMPLOYEE_CREATE_ARGUMENT_IS_MANDATORY = "Аргумент создания сотрудника является обязательным аргументом";
    public static final String EMPLOYEE_UPDATE_ARGUMENT_IS_MANDATORY = "Аргумент обновления сотрудника является обязательным аргументом";
    public static final String EMPLOYEE_NOT_FOUND = "Сотрудник не найден";
    public static final String EMPLOYEE_FIRED = "Сотрудник уволен ранее";
    public static final String EMPLOYEE_NOT_FIRED = "Сотрудник еще не уволен";
    public static final String EMPLOYEE_NOT_IN_DEPARTMENT = "У сотрудника не установлен отдел";


}
